--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="row my-0 mb-5">
 
         <div align="centre" class="col-2">
-          <img style="transform: translateY(-2px);width:100%;padding-left: 2em;" src="logo.png" alt="">
+          <img style="transform: translateY(-2px);width:100%;padding-left: 2em;" src="https://debaprasad-dez.github.io/apollo-dental/logo.png" alt="">
         </div>
         <div class="col-8  mt-2" style="padding-left: 1em;">
           <h1 class="mb-2 mt-1" style="font-size: 2em; font-weight: bold;color: #00799e;line-height: 1.3;">
@@ -118,7 +118,7 @@
                         
                       </h2>
                       <br>
-                      <img width="40%" src="FAIR.png" />
+                      <img width="40%" src="https://debaprasad-dez.github.io/apollo-dental/FAIR.png" />
                   </div>
                 </div>
               </div>
